Removed boring rendering methods & added SVG rendering method

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     <!-- endbuild -->
   </head>
   <body>
+    <div id="treeviewr" data-file="tree.json"></div>
     
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
