renamed JS file and added vertical centering to text rendering

--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     
-    <!-- build:js scripts/main.js -->
-    <script src="scripts/main.js"></script>
+    <!-- build:js scripts/treeviewr.js -->
+    <script src="scripts/treeviewr.js"></script>
     <!-- endbuild -->
   </body>
 </html>
