Added support for setting the size of a single tree node

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <!-- endbuild -->
   </head>
   <body>
-    <div id="treeviewr" data-file="tree.json"></div>
+    <div id="treeviewr" data-file="tree.json" data-element-radius="36"></div>
     
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
